# pm

./: .env.dev  .env.prod  .gitignore  CLAUDE.md  Makefile  app.py  auth.py  config.py  deps.py  ecosystem.config.js  logconf.py  main.py  models.py  pyproject.toml
agent/: __init__.py  core.py  knowledge.py  reindex.py  tools.py
agent/tools/: __init__.py  _shared.py  alerts.py  binding.py  projects.py  schedule.py  task_detail.py  tasks.py
blueprints/: ai.py  calendar.py  dashboard.py  ical.py  meetings.py  pm_agent.py  projects.py  tasks.py
repositories/: __init__.py  alerts.py  calendar.py  comments.py  projects.py  subtasks.py  tasks.py  users.py
routers/: __init__.py  agent_chat.py
scripts/: import_shouyu.py
static/: ._js
static/css/: app.css
static/js/: app.js  chat-commands.js
templates/: index.html
wecom/: agent.py  bot.py  cards.py  commands.py  notify.py
