[project]
name = "pm"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.3",
    "requests>=2.34.2",
    "wecom-aibot-python-sdk>=1.0.2",
    "websockets[socks]>=12.0,<14.0",
    "python-socks>=2.8.2",
    "python-dotenv>=1.2.2",
    # AI 大脑（agent/ 包）：Agno 框架 + MiniMax（OpenAILike，用 openai SDK）+ SqliteDb 会话库（sqlalchemy）
    "agno>=2.6",
    "openai>=1.0",
    "sqlalchemy[asyncio]>=2.0",
    "loguru>=0.7.3",
    "opentelemetry-api>=1.43.0",
    "opentelemetry-sdk>=1.43.0",
    "openinference-instrumentation-agno>=0.1.38",
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.50.2",
    "python-multipart>=0.0.32",
    "jinja2>=3.1.6",
    "a2wsgi>=1.10.10",
    "gunicorn>=26.0.0",
    "psycopg[binary]>=3.3.4",
    "ollama>=0.6.2",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "openpyxl>=3.1.5",
    "python-pptx>=1.0.2",
    "markdown>=3.10.2",
    "pgvector>=0.5.0",
]
